--- a/src/components/mainpage/content/AboutMe.module.css
+++ b/src/components/mainpage/content/AboutMe.module.css
@@ -25,7 +25,7 @@
     color: white;
     font-size: 1.8rem;
     text-align: right;
-    width: 80%;
+    width: 60%;
 }
 
 .aboutme-container .skillcontainer{
